Adding new enable_java_integration method + clean up